fix: rule page overflow-x

--- a/src/app/pages/rule/rule.component.scss
+++ b/src/app/pages/rule/rule.component.scss
@@ -3,7 +3,7 @@ nz-list,
 nz-spin {
   position: absolute;
   margin-left: -24px;
-  width: calc(100% - 180px);
+  width: calc(100% - 182px);
 }
 
 .tools {
